# spectra-sdr

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  hallycon_m2sdr_platform.py  hallycon_m2sdr_target.py  hallycon_m2sdr_target_v2.py  hallycon_m2sdr_v2_design.md  pin-map.txt  requirements.txt  resource_utilization.md  setup_deps.sh  spectra_platform.py  spectra_target.py  spectra_target_v2.py  spectra_v2_design.md  usb_iq_device.py  usb_iq_device.v  validate_sdr.py
.github/workflows/: lint.yml
docs/: clocking_and_ad9364_init.md  developer_experience_strategy.md  hallycon_m2sdr_v2_design.md  litex_m2sdr_pinmap_reference.md  pinmap_reference.md  quickstart.md  spectra_v2_design.md
scripts/: ad9364_init.py
software/: README.md
software/kernel/: Makefile
software/soapysdr/: CMakeLists.txt  SpectraRegistration.cpp  SpectraUSB.hpp  SpectraUSBDevice.hpp
